# docker-latest-gcc-cmake

./: CMakeLists.txt  README.md
tools/shells/: init_variables.sh
